# wordlistctl

./: .gitignore  DOXYFILE.de  DOXYFILE.en  DOXYFILE.es  README.md  cli.h  config.h  decompress.c  decompress.h  download.c  download.h  file.c  file.h  main.c  meson.build  tui.c  tui.h
docs/de/html/: annotated.html  classes.html  config_8h_source.html  download_8h_source.html  doxygen_crawl.html  file_8h_source.html  files.html  functions.html  functions_vars.html  graph_legend.html  index.html  md_README.html  menudata.js  navtreedata.js  pages.html  structconfig.html  structconfig.js  structdownload__job.html  structdownload__job.js  structwordlist.html  tui_8h_source.html
docs/de/latex/: annotated.tex  config_8h_source.tex  download_8h_source.tex  file_8h_source.tex  files.tex  md_README.tex  refman.tex  structconfig.tex  structdownload__job.tex  structwordlist.tex
docs/en/html/: annotated.html  classes.html  config_8h_source.html  download_8h_source.html  doxygen_crawl.html  functions.html  functions_vars.html  graph_legend.html  navtreedata.js  navtreeindex0.js  structconfig.html  (+2 more)
docs/html/: annotated.html  annotated_dup.js  classes.html  download_8h_source.html  doxygen_crawl.html  file_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  index.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html  structconfig-members.html  structconfig.html  structdownload__job-members.html  structdownload__job.html  structwordlist-members.html  structwordlist.html  tui_8h_source.html
docs/latex/: annotated.tex  download_8h_source.tex  files.tex  refman.tex  structconfig.tex  structdownload__job.tex  structwordlist.tex  tui_8h_source.tex
man/man3/: config.3  wordlist.3
(+58 files in other folders)
